add protected routes for categories
